--- a/main.html
+++ b/main.html
@@ -4,10 +4,20 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav class="nav-bar">
+		<div><a href="#">Bootcamps</a><i class="fa-solid fa-caret-down"></i></div>
+		<div><a href="#">Coding</a><i class="fa-solid fa-caret-down"></i></div>
+		<div><a href="#">Carrer Resources</a><i class="fa-solid fa-caret-down"></i></div>
+		<div><a href="#">Tech Fields</a><i class="fa-solid fa-caret-down"></i></div>
+		<div><a href="#">News&Commentary</a></div>
+		<input class="search" type="text" placeholder="Search">
+		<button>Search</button>
+	</nav>
     <script type="text/javascript" src="./script.js">
 </script>
 
